[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distromate-dm-api"
version = "1.2.0"
description = "DistroMate License Verification SDK for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DistroMate"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["distromate", "license", "verification", "sdk"]
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/yangsengui/dm-api-python"
Repository = "https://github.com/yangsengui/dm-api-python"
Documentation = "https://github.com/yangsengui/dm-api-python#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dm_api*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
